fdo#74106: Fix for Hebrew Text-Bulleted List converted to Numbered List

Problem:
   Hebrew Text-Bulleted List converted to Numbered List in round trip file

Implementaion:
   - Added Hebrew support for import and export for list.
   - Added Unit test case.

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx
Reviewed on:
	https://gerrit.libreoffice.org/7693

Change-Id: I739f4b74fb0451f6da80be06114c48074d1e4cdf